criacao da rota checkout e ajuste no sistema paara adaptar a nova funcionalidade
